--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /LSI Project GUI/LSI Project GUI.VC.db
+/LSI Project GUI/LSI Project GUI.VC.VC.opendb
