Added some test functions such as kontrast_squared and move around a bit in the gui

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /LSI Project GUI/LSI Project GUI.VC.db
 /LSI Project GUI/LSI Project GUI.VC.VC.opendb
 /LSI Project GUI/LSI Project GUI.pro.user
+/LSI Project GUI/LSI Project GUI/x64/Debug/qcustomplot.obj
+/LSI Project GUI/LSI Project GUI/x64/Debug/moc_qcustomplot.obj
