Nu fungerar bildstreamen igen

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /LSI Project GUI/LSI Project GUI.pro.user
 /LSI Project GUI/LSI Project GUI/x64/Debug/qcustomplot.obj
 /LSI Project GUI/LSI Project GUI/x64/Debug/moc_qcustomplot.obj
+/LSI Project GUI/LSI Project GUI/x64/Debug/LSI Project GUI.tlog/unsuccessfulbuild
